--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-tensorflow
-python-multipart
-pillow
-tensorflow-serving-api
-matplotlib
+tensorflow==2.12.0
+streamlit==1.42.2
 numpy
-streamlit
-streamlit
-google-generative-ai
+pillow
+matplotlib
+fastapi
+uvicorn
+google-generative-ai==0.4.0
